# rowing-proj

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  add-firewall-rule.ps1  add_fw_rule.bat  tmux-save.sh
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  seed.py
backend/app/models/: __init__.py  integration.py  team.py  user.py  workout.py
backend/app/routers/: auth.py  concept2.py  strava.py  teams.py  workouts.py
backend/app/schemas/: __init__.py  auth.py  concept2.py  strava.py  workout.py
backend/app/services/: __init__.py  auth.py  concept2.py  concept2_importer.py  strava.py  strava_importer.py  token_crypto.py
backend/migrations/: 001_add_workout_name.sql  002_add_concept2_integrations.sql  003_add_strava_connections.sql
backend/tests/: conftest.py  test_concept2_config.py  test_concept2_importer.py  test_concept2_router.py  test_strava_config.py  test_strava_importer.py  test_strava_router.py  test_strava_service.py  test_token_crypto.py  test_workouts.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: auth-context.tsx  auth-wrapper.tsx
mobile/: .env.example  .opencode-prompt.md  App.tsx  package-lock.json  package.json
mobile/src/api/: client.ts  concept2.ts  strava.ts  workouts.ts
mobile/src/components/: GreekIcons.tsx
mobile/src/contexts/: AuthContext.tsx
mobile/src/navigation/: AppNavigator.tsx  CustomTabBar.tsx  MainTabs.tsx  types.ts
mobile/src/screens/: DashboardScreen.tsx  EditWorkoutScreen.tsx  LogWorkoutScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  (+6 more)
(+3 files in other folders)
